<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000">

    <SurfaceView
        android:id="@+id/sv_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tv_mirror_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_margin="12dp"
        android:background="#88000000"
        android:fontFamily="monospace"
        android:padding="6dp"
        android:textColor="#FFFFFFFF"
        android:textSize="12sp"
        android:text="@string/status_idle" />

    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"
        android:background="#66000000"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            style="@android:style/Widget.Material.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="56dp"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/btn_home"
            style="@android:style/Widget.Material.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="56dp"
            android:text="@string/btn_home" />

        <Button
            android:id="@+id/btn_recent"
            style="@android:style/Widget.Material.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="56dp"
            android:text="@string/btn_recent" />

        <Button
            android:id="@+id/btn_rotate"
            style="@android:style/Widget.Material.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="56dp"
            android:text="@string/btn_rotate" />

        <Button
            android:id="@+id/btn_exit"
            style="@android:style/Widget.Material.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="56dp"
            android:text="@string/btn_exit" />
    </LinearLayout>
</FrameLayout>
